==> ksekimoto/UsbHLib/hw_dep/rx64m/usbh_hw.c <==
#include "common.h"
#include "usbh_timer.h"
#include "usbh_hw.h"
#include "usbh_config.h"
#define USBH_USE_MSD
#define PIPE_CLEAR_FIFO
#define dprintk(fmt, ...)   debug_printf("%s(): "fmt, __func__, ## __VA_ARGS__)
#define dprintk(fmt, ...)
#define API_FUNC_ENTER()    debug_printf("%s enter\n", __func__)
#define API_FUNC_EXIT()     debug_printf("%s exit\n", __func__)
#define API_FUNC_ENTER()
#define API_FUNC_EXIT()
#define MAX_PACKET  64
#define USBH_INT_LEVEL  14
#define PIPE0   0
#define BULK_IN_PIPENO  1
#define BULK_OUT_PIPENO 2
#define INT_IN_PIPENO   3
#define INT_OUT_PIPENO  4
#define DIR_R   0
#define DIR_W   1
#define ISEL_R  0
#define ISEL_W  1
#define PIPE_BULK   1
#define PIPE_INT    2
#define PIPE_ISO    3
#define USB_MAX_EP      6   // max number of end point
#define USB_MAX_PIPE    10  // max number of pipes
#define USB_MAX_FIFO    3   // max number of fifo
#define FIFO_CFIFO      0   // CFIFO type
#define FIFO_D0FIFO     1   // DOFIFO type
#define FIFO_D1FIFO     2   // D1FIFO type
#define FIFO_LOOP       4
#define FIFO_TIMEOUT    10000
#define MBW_BYTE 0
#define MBW_WORD 1
#define MBW_VAL (MBW_BYTE)
#define PID_NAK     0
#define PID_BUF     1
#define PID_STALL_1 2
#define PID_STALL_2 3
#define PIPE_IDLE  0x00
#define PIPE_WAIT  0x01
#define PIPE_DONE  0x02
#define PIPE_NORES 0x03
#define PIPE_STALL 0x04
#define PIPE_ERROR 0x05
#define M_BCHGE (0x4000)
#define M_DTCHE (0x1000)
#define M_ATTCHE (0x0800)
#define M_BEMPE (0x0400)
#define M_NRDYE (0x0200)

void ul_host_config(int conn_num)
{
    API_FUNC_ENTER();
    usbh_init();
    usbh_attach();
    API_FUNC_EXIT();
}

void ul_host_bus_reset(int conn_num)
{
    unsigned short tmp, i;
    API_FUNC_ENTER();
    USB0.DVSTCTR0.BIT.USBRST = 1;
    USB0.DVSTCTR0.BIT.UACT = 0;
    udelay(50000);
    USB0.DVSTCTR0.BIT.USBRST = 0;
    USB0.DVSTCTR0.BIT.UACT = 1;
    udelay(50000);
    USB0.INTSTS1.WORD = ~0x0800;
    for (i = 0; i < 50; ++i) {
        tmp = USB0.DVSTCTR0.BIT.RHST;
        if ((tmp & 4) == 4) {
            udelay(20000);
        } else {
            break;
        }
    }
    if ((tmp & 7) == 0) {
        debug_printf("USB SPEED not detected.\n");
    } else if ((tmp & 2) == 2) {
        usb_speed = SPEED_FULL;
        debug_printf("FULL SPEED detected.\n");
    } else {
        usb_speed = SPEED_LOW;
        debug_printf("LOW SPEED detected.\n");
    }
    usb_set_max_packet_size(usb_speed);
#ifdef USBH_DEBUG_dump_int_regs
    dump_int_regs(__func__, 1);
#endif
    API_FUNC_EXIT();
    return;
}

en_usb_status ul_control_setup_transaction(int conn_num, st_usb_device *dev, st_usb_setup_data *sd)
{
    int timeout;
    unsigned short max_packet_size = get_max_packet_size(PIPE0);
    int addr = dev->info.address;
#ifdef USBH_DEBUG_WAIT
    udelay(500000);
#endif
#ifdef USBH_DEBUG_CS
    debug_printf("CS\r\n");
#endif
    API_FUNC_ENTER();
    if (usb_speed == 1) {
        USB0.SOFCFG.BIT.TRNENSEL = 0;
    } else {
        USB0.SOFCFG.BIT.TRNENSEL = 1;
    }
    usbh_set_DEVADD(addr);
    intsts1_sack = 0;
    USB0.DCPMAXP.WORD = (unsigned short)((unsigned short)(addr << 12) + max_packet_size);
    USB0.INTSTS1.WORD = (unsigned short)~(M_SACK | M_SIGN); /* Status Clear */
#ifdef USBH_DEBUG_dump_int_regs
    dump_int_regs(__func__, 1);
#endif
    USB0.USBREQ.WORD = ((unsigned short)sd->BYTE.bRequest << 8) + (unsigned short)sd->BYTE.bmRequestType;
    USB0.USBVAL = ((unsigned short)sd->BYTE.wValue[1] << 8) + (unsigned short)sd->BYTE.wValue[0];
    USB0.USBINDX = ((unsigned short)sd->BYTE.wIndex[1] << 8) + (unsigned short)sd->BYTE.wIndex[0];
    USB0.USBLENG = ((unsigned short)sd->BYTE.wLength[1] << 8) + (unsigned short)sd->BYTE.wLength[0];
    USB0.DCPCTR.WORD = M_SUREQ;
#ifdef USBH_DEBUG_SETUP
    debug_printf("ST %2x %2x %2x %2x\r\n", USB0.USBREQ.WORD, USB0.USBVAL, USB0.USBINDX, USB0.USBLENG);
#endif
    timeout = 1000;
    while (1) {
        if (intsts1_sack == 1)
            break;
        udelay(100);
        if (timeout-- == 0) {
#ifdef USBH_DEBUG_ERR
            debug_printf("* [%s] timeout\r\n", __func__);
#endif
            return USBH_ERROR;
        }
    } API_FUNC_EXIT();
    return USBH_OK;
}

en_usb_status ul_control_in_transaction(int conn_num, st_usb_device *dev, int size, unsigned char *data)
{
    int ret;
    int pipe = PIPE0;
    API_FUNC_ENTER();
    usbh_pipe_set_pidnak(pipe);
    USB0.DCPCTR.WORD |= M_SQSET;
    ret = rd_transfer(pipe, conn_num, dev, size, data);
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}

en_usb_status ul_control_out_transaction(int conn_num, st_usb_device *dev, int size, unsigned char *data)
{
    int ret;
    int pipe = PIPE0;
    API_FUNC_ENTER();
    usbh_pipe_set_pidnak(pipe);
    USB0.DCPCTR.WORD |= M_SQSET;
    ret = wt_transfer(pipe, conn_num, dev, size, data);
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}

en_usb_status ul_control_ack_out_transaction(int conn_num, st_usb_device *dev)
{
    int ret;
    int pipe = PIPE0;
    API_FUNC_ENTER();
    usbh_pipe_set_pidnak(pipe);
    USB0.DCPCFG.WORD |= 0x0010;   //DIR_W
    USB0.DCPCTR.WORD = M_SQSET;
    ret = wt_transfer(pipe, conn_num, dev, 0, 0);
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}

en_usb_status ul_control_ack_in_transaction(int conn_num, st_usb_device *dev)
{
    int ret;
    int pipe = PIPE0;
    API_FUNC_ENTER();
    usbh_pipe_set_pidnak(pipe);
    USB0.DCPCFG.WORD &= ~0x0010;   //DIR_R;
    USB0.DCPCTR.WORD = M_SQSET;
    ret = rd_transfer(pipe, conn_num, dev, 0, 0);
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}

en_usb_status ul_interrupt_in_transfer(int conn_num, st_usb_device *dev, int *size, unsigned char *data)
{
    int ret;
    int addr = dev->info.address;
    int pipe = INT_IN_PIPENO;
    API_FUNC_ENTER();
#ifdef USBH_DEBUG_II
    debug_printf("II%d P:%d A:%d E:%d\r\n", size, pipe, addr, dev->info.interface[dev->info.cur_interface].ea_in);
#endif
    usbh_pipe_set_pidnak(pipe);
    usbh_pipe_set_ep(pipe, (int)dev->info.interface[dev->info.cur_interface].ea_in, DIR_R, PIPE_INT, (int)pipe_max_packet[pipe], addr);
    //usbh_pipe_clr_sq(pipe);
    ret = rd_transfer(pipe, conn_num, dev, size, data);
    udelay(20000);
#ifdef USBH_DEBUG_II
    debug_printf("II(%d) ret=%d\r\n", size - rd_cnt[pipe], ret);
#endif
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}

en_usb_status ul_interrupt_out_transfer(int conn_num, st_usb_device *dev, int size, unsigned char* data)
{
    int ret;
    int addr = dev->info.address;
    int pipe = INT_OUT_PIPENO;
    API_FUNC_ENTER();
#ifdef USBH_DEBUG_IO
    debug_printf("IO%d P:%d A:%d E:%d\r\n",size, pipe, addr, dev->info.interface[dev->info.cur_interface].ea_out);
#endif
    usbh_pipe_set_pidnak(pipe);
    usbh_pipe_set_ep(pipe, (int)dev->info.interface[dev->info.cur_interface].ea_out, DIR_W, PIPE_INT, MAX_PACKET, addr);
    //usbh_pipe_clr_sq(pipe);
    usbh_pipe_clr_buf(pipe);
    ret = wt_transfer(pipe, conn_num, dev, size, data);
    udelay(20000);
#ifdef USBH_DEBUG_IO
    debug_printf("I0(%d) ret=%d\r\n", size - wt_cnt[pipe], ret);
#endif
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}

en_usb_status ul_bulk_out_transfer(int conn_num, st_usb_device *dev, int size, unsigned char* data)
{
#ifdef USBH_DEBUG_WAIT
    udelay(500000);
#endif
    int ret;
    int addr = dev->info.address;
    int pipe = BULK_OUT_PIPENO;
    API_FUNC_ENTER();
#ifdef USBH_DEBUG_BO
    debug_printf("BO%d P:%d A:%d E:%d\r\n",size, pipe, addr, dev->info.interface[dev->info.cur_interface].ea_out);
#endif
    usbh_pipe_set_pidnak(pipe);
    usbh_pipe_set_ep(pipe, (int)dev->info.interface[dev->info.cur_interface].ea_out, DIR_W, PIPE_BULK, (int)pipe_max_packet[pipe], addr);
    //usbh_pipe_clr_sq(pipe);
    usbh_pipe_clr_buf(pipe);
    ret = wt_transfer(pipe, conn_num, dev, size, data);
    udelay(20000);
#ifdef USBH_DEBUG_BO
    debug_printf("B0(%d) ret=%d\r\n", size - wt_cnt[pipe], ret);
#endif
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}

en_usb_status ul_bulk_in_transfer(int conn_num, st_usb_device *dev, int size, unsigned char* data)
{
    int ret;
    int addr = dev->info.address;
    int pipe = BULK_IN_PIPENO;
    API_FUNC_ENTER();
#ifdef USBH_DEBUG_BI
    debug_printf("BI%d P:%d A:%d E:%d\r\n", size, pipe, addr, dev->info.interface[dev->info.cur_interface].ea_in);
#endif
    usbh_pipe_set_pidnak(pipe);
    usbh_pipe_set_ep(pipe, (int)dev->info.interface[dev->info.cur_interface].ea_in, DIR_R, PIPE_BULK, (int)pipe_max_packet[pipe], addr);
    //usbh_pipe_clr_sq(pipe);
    ret = rd_transfer(pipe, conn_num, dev, size, data);
    udelay(20000);
#ifdef USBH_DEBUG_BI
    debug_printf("BI(%d) ret=%d\r\n", size - rd_cnt[pipe], ret);
#endif
    API_FUNC_EXIT();
    if (ret < 0)
        return USBH_ERROR;
    return USBH_OK;
}
