==> ksekimoto/UsbHLib/hw_dep/stm32l4/usbh_hw.c <==
#include "usbh_timer.h"
#include "usbh_hw.h"
#include "usbh_config.h"
#include "_usbh_def.h"
#include "usbh_ioreq.h"
#include "debug_printf.h"
#define DATA0 0x03
#define DATA1 0x0b
#define ACK   0x02
#define STALL 0x0e
#define NAK   0x0a

void ul_host_config(int conn_num)
{
    INFOPRINT("\nUSB Configuration connector %d...\n",conn_num);
}

void ul_host_bus_reset(int conn_num)
{
    phost->gState = HOST_IDLE;
    phost->EnumState = ENUM_IDLE;
    phost->RequestState = CMD_SEND;
    phost->Timer = 0;

    phost->Control.state = CTRL_SETUP;
    phost->Control.errorcount = 0;
    phost->device.address = 0;

    //phost->Control.pipe_size = 8;

    USBH_LL_ResetPort(phost);
    USBH_Delay(100);

    usb_speed = USBH_LL_GetSpeed(phost);
    switch(usb_speed) {
    case USBH_SPEED_FULL:
        //phost->Control.pipe_size = 64;
        //phost->device.speed = USBH_SPEED_FULL;
        usb_speed = SPEED_FULL;
        debug_printf("FULL SPEED\r\n");
        break;
        //case USBH_SPEED_HIGH:
        //    phost->Control.pipe_size = 64;
        //    phost->device.speed = USBH_SPEED_HIGH;
        //    usb_speed = SPEED_HI;
        //    debug_printf("HIGH SPEED\r\n");
        //    break;
    default:
        phost->Control.pipe_size = 8;
        phost->device.speed = USBH_SPEED_LOW;
        debug_printf("LOW SPEED\r\n");
        usb_speed = SPEED_LOW;
        break;
    }

    phost->Control.pipe_out = USBH_AllocPipe(phost, 0x00);
    phost->Control.pipe_in = USBH_AllocPipe(phost, 0x80);
    /* Open Control pipes */
    USBH_OpenPipe(phost, phost->Control.pipe_in, 0x80, phost->device.address, phost->device.speed,
    USBH_EP_CONTROL, phost->Control.pipe_size);

    /* Open Control pipes */
    USBH_OpenPipe(phost, phost->Control.pipe_out, 0x00, phost->device.address, phost->device.speed,
    USBH_EP_CONTROL, phost->Control.pipe_size);
}

en_usb_status ul_control_setup_transaction(int conn_num, st_usb_device *dev, st_usb_setup_data *sd)
{
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    USBH_LL_SetToggle(phost, phost->Control.pipe_out, 0);
    USBH_CtlSendSetup(phost, (uint8_t *)sd, phost->Control.pipe_out);
    do {
        URB_Status = USBH_LL_GetURBState(phost, phost->Control.pipe_out);
        if (URB_Status == USBH_URB_ERROR) {
            USBH_LL_Stop(phost);
            status = USBH_ERROR;
            break;
        }
        if (URB_Status == USBH_URB_STALL) {
            status = USBH_STALL;
            break;
        }
        if (URB_Status == USBH_URB_NOTREADY) {
            status = USBH_NAK;
            break;
        }
    } while (URB_Status == USBH_URB_IDLE);
#ifdef USB_DEBUG_CS
    if (status != USBH_OK)
    debug_printf("CS%d\r\n", status);
#endif
    return status;
}

en_usb_status ul_control_in_transaction(int conn_num, st_usb_device *dev, int size, unsigned char *data)
{
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    USBH_CtlReceiveData(phost, data, size, phost->Control.pipe_in);
    do {
        URB_Status = USBH_LL_GetURBState(phost, phost->Control.pipe_in);
        if (URB_Status == USBH_URB_ERROR) {
            USBH_LL_Stop(phost);
            status = USBH_ERROR;
            break;
        }
        if (URB_Status == USBH_URB_STALL) {
            status = USBH_STALL;
            break;
        }
        if (URB_Status == USBH_URB_NOTREADY) {
            status = USBH_NAK;
            break;
        }
    } while (URB_Status == USBH_URB_IDLE);
#ifdef USB_DEBUG_CS
    if (status != USBH_OK)
    debug_printf("CI%d\r\n", status);
#endif
    return status;
}

en_usb_status ul_control_out_transaction(int conn_num, st_usb_device *dev, int size, unsigned char *data)
{
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    USBH_CtlSendData(phost, data, size, phost->Control.pipe_out, 1);
    do {
        URB_Status = USBH_LL_GetURBState(phost, phost->Control.pipe_out);
        if (URB_Status == USBH_URB_ERROR) {
            USBH_LL_Stop(phost);
            status = USBH_ERROR;
            break;
        }
        if (URB_Status == USBH_URB_STALL) {
            status = USBH_STALL;
            break;
        }
        if (URB_Status == USBH_URB_NOTREADY) {
            status = USBH_NAK;
            break;
        }
    } while (URB_Status == USBH_URB_IDLE);
#ifdef USB_DEBUG_CS
    if (status != USBH_OK)
    debug_printf("CO%d\r\n", status);
#endif
    return status;
}

en_usb_status ul_control_ack_out_transaction(int conn_num, st_usb_device *dev)
{
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    USBH_LL_SetToggle(phost, phost->Control.pipe_out, 1);
    USBH_CtlSendData(phost, 0, 0, phost->Control.pipe_out, 1);
    do {
        URB_Status = USBH_LL_GetURBState(phost, phost->Control.pipe_out);
        if (URB_Status == USBH_URB_ERROR) {
            USBH_LL_Stop(phost);
            status = USBH_ERROR;
            break;
        }
        if (URB_Status == USBH_URB_STALL) {
            status = USBH_STALL;
            break;
        }
        if (URB_Status == USBH_URB_NOTREADY) {
            status = USBH_NAK;
            break;
        }
    } while (URB_Status == USBH_URB_IDLE);
#ifdef USB_DEBUG_CS
    if (status != USBH_OK)
    debug_printf("AO%d\r\n", status);
#endif
    return status;
}

en_usb_status ul_control_ack_in_transaction(int conn_num, st_usb_device *dev)
{
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    USBH_LL_SetToggle(phost, phost->Control.pipe_in, 1);
    USBH_CtlReceiveData(phost, 0, 0, phost->Control.pipe_in);
    do {
        URB_Status = USBH_LL_GetURBState(phost, phost->Control.pipe_in);
        if (URB_Status == USBH_URB_ERROR) {
            USBH_LL_Stop(phost);
            status = USBH_ERROR;
            break;
        }
        if (URB_Status == USBH_URB_STALL) {
            status = USBH_STALL;
            break;
        }
        if (URB_Status == USBH_URB_NOTREADY) {
            status = USBH_NAK;
            break;
        }
    } while (URB_Status == USBH_URB_IDLE);
#ifdef USB_DEBUG_CS
    if (status != USBH_OK)
    debug_printf("AI%d\r\n", status);
#endif
    return status;
}

en_usb_status ul_interrupt_in_transfer(int conn_num, st_usb_device *dev, int *size, unsigned char *data)
{
    int timeout;
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    HCD_HCStateTypeDef state = -1;
    uint8_t ep = dev->info.interface[dev->info.cur_interface].ea_in | 0x80;
    uint16_t max = (int)(dev->info.interface[dev->info.cur_interface].ea_in_max_packet_size);
    //USBH_OpenPipe(phost, pipe_ii, ep, (uint8_t) (dev->info.address), phost->device.speed, USB_EP_TYPE_INTR, max);
    //USBH_LL_SetToggle(phost, pipe_ii, get_data_toggle_bit(conn_num, dev, ep));
    uint16_t len = (uint16_t)*size;
    uint16_t done = 0;
    int nak_count = 0;
    len = (max > (uint16_t)*size - done ? (uint16_t)*size - done : max);
    USBH_InterruptReceiveData(phost, (uint8_t *)(data + done), (uint8_t)len, (uint8_t)pipe_ii);
    while ((URB_Status = USBH_LL_GetURBState(phost, pipe_ii)) == URB_IDLE)
        ;
    len = 0;
    switch((int)URB_Status) {
    case URB_DONE:
        state = HAL_HCD_HC_GetState((HCD_HandleTypeDef *)phost->pData, pipe_ii);
        switch((int)state) {
        case HC_XFRC:
            len = HAL_HCD_HC_GetXferCount((HCD_HandleTypeDef *)phost->pData, pipe_ii);
            //toggle_data_toggle_bit(conn_num, dev, ep);
            break;
        case HC_NAK:
            status = USBH_NAK;
            break;
        }
        break;
    default:
        status = USBH_STALL;
        break;
    }
    done += len;
    *size = (int)done;
#ifdef USB_DEBUG_II
    debug_printf("II%d P:%d A:%d E:%x S:%d\r\n", len, pipe_ii, dev->info.address, ep, state);
    if (status != USBH_OK)
    debug_printf("II(%d) ret=%d\r\n", len, status);
#endif
    //if (status != USBH_NAK)
    //    debug_printf("II(%d) ret=%d\r\n", len, status);
    return status;
}

en_usb_status ul_interrupt_out_transfer(int conn_num, st_usb_device *dev, int size, unsigned char* data)
{
    int timeout;
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    uint8_t ep = dev->info.interface[dev->info.cur_interface].ea_out;
    uint16_t max = (int)(dev->info.interface[dev->info.cur_interface].ea_out_max_packet_size);
    USBH_OpenPipe(phost, pipe_io, ep, (uint8_t)(dev->info.address), phost->device.speed, USB_EP_TYPE_INTR, max);
    USBH_LL_SetToggle(phost, pipe_io, 0);
#ifdef USB_DEBUG_IO
    debug_printf("IO%d P:%d A:%d E:%x\r\n", size, pipe_io, dev->info.address, ep);
#endif
    uint16_t done = 0;
    uint16_t len = 0;
    int nak_count = 0;
    while (done < size) {
        len = (max > (uint16_t)size - done ? (uint16_t)size - done : max);
        timeout = 2000;
        USBH_InterruptSendData(phost, data + (int)done, len, pipe_io);
        do {
            URB_Status = USBH_LL_GetURBState(phost, pipe_io);
            if (URB_Status == USBH_URB_DONE)
                break;
            if (URB_Status == USBH_URB_ERROR) {
                status = USBH_ERROR;
                goto ul_interrupt_out_transfer_exit;
            }
            if (URB_Status == USBH_URB_STALL) {
                status = USBH_STALL;
                goto ul_interrupt_out_transfer_exit;
            }
            if (timeout-- == 0) {
                status = USBH_TIMEOUT;
                goto ul_interrupt_out_transfer_exit;
            }
            HAL_Delay(2);
        } while (URB_Status == USBH_URB_IDLE);
        done += len;
    }
    ul_interrupt_out_transfer_exit:
#ifdef USB_DEBUG_IO
    if (status != USBH_OK)
    debug_printf("IO(%d) ret=%d\r\n", done, status);
#endif
    return status;
}

en_usb_status ul_bulk_out_transfer(int conn_num, st_usb_device *dev, int size, unsigned char* data)
{
    int timeout;
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    uint8_t ep = dev->info.interface[dev->info.cur_interface].ea_out;
    uint16_t max = (int)(dev->info.interface[dev->info.cur_interface].ea_out_max_packet_size);
    //USBH_OpenPipe(phost, pipe_bo, ep, (uint8_t) (dev->info.address), phost->device.speed, USB_EP_TYPE_BULK, max);
    //USBH_LL_SetToggle(phost, pipe_bo, 0);
#ifdef USB_DEBUG_BO
    debug_printf("BO%d P:%d A:%d E:%x\r\n", size, pipe_bo, dev->info.address, ep);
#endif
    uint16_t done = 0;
    uint16_t len = 0;
    int nak_count = 0;
    while (done < size) {
        len = (max > (uint16_t)size - done ? (uint16_t)size - done : max);
        ul_bulk_out_transfer_0: timeout = 2000;
        USBH_BulkSendData(phost, data + (int)done, len, pipe_bo, 1);
        do {
            URB_Status = USBH_LL_GetURBState(phost, pipe_bo);
            if (URB_Status == USBH_URB_DONE)
                break;
            if (URB_Status == USBH_URB_ERROR) {
                status = USBH_ERROR;
                goto ul_bulk_out_transfer_exit;
            }
            if (URB_Status == USBH_URB_STALL) {
                status = USBH_STALL;
                goto ul_bulk_out_transfer_exit;
            }
            //if (URB_Status == USBH_URB_NOTREADY)  {
            //    nak_count++;
            //    if (nak_count >= 500) {
            //        status = USBH_NAK;
            //        goto ul_bulk_out_transfer_exit;
            //    }
            //    HAL_Delay(5);
            //    goto ul_bulk_out_transfer_0;
            //}
            if (timeout-- == 0) {
                status = USBH_TIMEOUT;
                goto ul_bulk_out_transfer_exit;
            }
            HAL_Delay(2);
        } while (URB_Status == USBH_URB_IDLE);
        done += len;
    }
    ul_bulk_out_transfer_exit:
#ifdef USB_DEBUG_BO
    if (status != USBH_OK)
    debug_printf("BO(%d) ret=%d\r\n", done, status);
#endif
    return status;
}

en_usb_status ul_bulk_in_transfer(int conn_num, st_usb_device *dev, int size, unsigned char* data)
{
    int timeout;
    en_usb_status status = USBH_OK;
    USBH_URBStateTypeDef URB_Status = USBH_URB_IDLE;
    uint8_t ep = (dev->info.interface[dev->info.cur_interface].ea_in | 0x80);
    uint16_t max = (int)(dev->info.interface[dev->info.cur_interface].ea_in_max_packet_size);
    uint16_t done = 0;
    //USBH_OpenPipe(phost, pipe_bi, ep, (uint8_t) (dev->info.address), phost->device.speed, USB_EP_TYPE_BULK, max);
    //USBH_LL_SetToggle(phost, pipe_bi, 0);
    uint16_t len = 0;
    int nak_count = 0;
    while (done < size) {
        len = (max > (uint16_t)size - done ? (uint16_t)size - done : max);
        ul_bulk_in_transfer_0: timeout = 2000;
        USBH_BulkReceiveData(phost, data + (int)done, len, pipe_bi);
        do {
            URB_Status = USBH_LL_GetURBState(phost, pipe_bi);
            if (URB_Status == USBH_URB_DONE) {
                break;
            }
            if (URB_Status == USBH_URB_ERROR) {
                status = USBH_ERROR;
                goto ul_bulk_in_transfer_exit;
            }
            if (URB_Status == USBH_URB_STALL) {
                status = USBH_STALL;
                goto ul_bulk_in_transfer_exit;
            }
            //if (URB_Status == USBH_URB_NOTREADY) {
            //    nak_count++;
            //    if (nak_count >= 500) {
            //        status = USBH_NAK;
            //        goto ul_bulk_in_transfer_exit;
            //    }
            //    HAL_Delay(5);
            //    goto ul_bulk_in_transfer_0;
            //}
            if (timeout-- == 0) {
                status = USBH_TIMEOUT;
                goto ul_bulk_in_transfer_exit;
            }
            HAL_Delay(2);
        } while (URB_Status == USBH_URB_IDLE);
        done += len;
    }
    ul_bulk_in_transfer_exit:
#ifdef USB_DEBUG_BI
    debug_printf("BI%d P:%d A:%d E:%x\r\n", size, pipe_bi, dev->info.address, ep);
    if (status != USBH_OK)
    debug_printf("BI(%d) ret=%d\r\n", done, status);
#endif
    return status;
}
